<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:scrollbars="none"
    android:background="?background_color"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dgsl.utility_package.ui.ui_theming.UIThemeActivity"
    android:layout_width="wrap_content">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/colorThemeLayout"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:textColor="?attr/text_color"
            android:text="@string/choose_your_theme_color"
            android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/colorListView"
                android:layout_gravity="center"
                android:clipToPadding="false"
                android:nestedScrollingEnabled="true"
                android:choiceMode="singleChoice"
                android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/colorGradientLayout"
        android:layout_below="@id/colorThemeLayout"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:textColor="?attr/text_color"
            android:text="@string/choose_your_gradient_theme_color"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:nestedScrollingEnabled="true"
            android:id="@+id/colorGradientListView"
            android:layout_gravity="center"
            android:clipToPadding="false"
            android:choiceMode="singleChoice"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/colorGradientLayout"
        android:layout_marginTop="@dimen/twenty_dp"
        android:orientation="vertical">

        <Switch
            android:id="@+id/switchTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textStyle="bold"
            android:layout_marginStart="@dimen/ten_dp"
            android:layout_marginEnd="@dimen/ten_dp"
            android:textColor="?attr/text_color"
            android:text="@string/enable_dark_mode"/>

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textStyle="bold"-->
<!--            android:layout_marginTop="@dimen/twenty_dp"-->
<!--            android:text="Change text Size"-->
<!--            android:layout_marginStart="@dimen/ten_dp"-->
<!--            android:layout_marginEnd="@dimen/ten_dp"-->
<!--            android:textColor="?attr/text_color"/>-->
    </LinearLayout>


</RelativeLayout>



</ScrollView>
