<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/ten_dp">

            <TextView
                android:id="@+id/lastUpdated_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerInParent="true"
                android:textColor="?attr/text_color"
                android:text="@string/last_updated_on"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/updateTimeDate_TV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="?attr/text_color"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/ten_dp"
                android:layout_marginRight="15dp"
                android:layout_toRightOf="@id/lastUpdated_TV"
                android:textAlignment="textStart"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/refreshBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginLeft="@dimen/five_dp"
                android:backgroundTint="@color/white"
                android:clickable="true"
                android:src="@drawable/ic_action_name" />
        </RelativeLayout>

        <!-- First Enter and Selected Field Here -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_five_dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:background="@color/transparent"
            android:weightSum="2">

            <EditText
                android:id="@+id/inputValue_TV"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty_dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/five_dp"
                android:layout_weight="1"
                android:background="@drawable/textview_bg"
                android:hint="@string/enter_currency_value"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:paddingLeft="@dimen/ten_dp"
                android:textColor="?attr/text_color"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:id="@+id/firstFlagView"
                    android:visibility="gone"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/flagFirstTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:padding="14dp"
                        android:textColor="@color/black"
                        android:textSize="10sp" />

                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="15dp"
                        android:layout_alignRight="@id/flagFirstTV"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dp"
                        android:background="@color/light_gray" />
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstCurrencyInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:layout_marginBottom="2.5dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:hint="@string/choose_region"
                    android:orientation="horizontal"
                    android:textColorHint="?attr/text_color">

                    <AutoCompleteTextView
                        android:id="@+id/filled_exposed_dropdown_main"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:inputType="none"
                        android:paddingStart="@dimen/forty_dp"
                        android:textSize="10sp" />
                </com.google.android.material.textfield.TextInputLayout>
            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/twenty_dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:background="?colorPrimary" />

            <ImageView
                android:id="@+id/swap_ImageView"
                android:layout_width="@dimen/fifty_dp"
                android:layout_height="@dimen/fifty_dp"
                android:layout_centerInParent="true"
                android:background="?attr/background_color"
                android:src="@drawable/ic_action_swap"
                app:tint="?colorPrimary" />
        </RelativeLayout>

        <!-- Second Enter and Selected Field Here -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/fifty_five_dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:background="@color/transparent"
            android:weightSum="2">

            <EditText
                android:id="@+id/result_EditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fifty_dp"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/five_dp"
                android:layout_weight="1"
                android:background="@drawable/textview_bg"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/result"
                android:inputType="none"
                android:paddingLeft="@dimen/ten_dp"
                android:textColor="?attr/text_color"
                android:textSize="16sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:id="@+id/secondFlagView"
                    android:layout_alignParentLeft="true"
                    android:visibility="gone"
                    android:layout_centerVertical="true"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/flagSecondTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:padding="14dp"
                        android:textStyle="bold"
                        android:textColor="?attr/text_color"
                        android:textSize="10sp" />
                    <TextView
                        android:layout_width="1dp"
                        android:layout_height="15dp"
                        android:layout_alignRight="@id/flagSecondTV"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="5dp"
                        android:background="@color/light_gray" />
                </RelativeLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:layout_marginBottom="2.5dp"
                    android:layout_weight="1"
                    android:hint="@string/choose_region"
                    android:orientation="horizontal"
                    android:textColorHint="?attr/text_color">

                    <AutoCompleteTextView
                        android:id="@+id/filled_exposed_dropdown_convert_menu"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="@dimen/forty_dp"
                        android:layout_gravity="center_vertical"
                        android:inputType="none"
                        android:textSize="10sp" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>
        </LinearLayout>



        <Button
            android:id="@+id/convert_Btn"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/forty_dp"
            android:layout_height="@dimen/fifty_five_dp"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:text="@string/convert"
            style="?buttonStyle"
            app:backgroundTint="@null"
            android:textStyle="bold" />

    </LinearLayout>

    <include layout="@layout/progress_view"
        android:id="@+id/progressView"
        android:visibility="gone"/>
</FrameLayout>